@@ -19,6 +19,7 @@ package org.apache.cassandra.metrics;
 
 import java.util.Set;
 
+import com.codahale.metrics.Counter;
 import com.codahale.metrics.Gauge;
 import com.codahale.metrics.Histogram;
 import com.codahale.metrics.Timer;
@@ -91,6 +92,10 @@ public class KeyspaceMetrics
     public final LatencyMetrics casPropose;
     /** CAS Commit metrics */
     public final LatencyMetrics casCommit;
+    /** Number of started repairs as coordinator on this keyspace */
+    public final Counter repairsStarted;
+    /** Number of completed repairs as coordinator on this keyspace */
+    public final Counter repairsCompleted;
 
     public final MetricNameFactory factory;
     private Keyspace keyspace;
@@ -236,6 +241,21 @@ public class KeyspaceMetrics
         casPrepare = new LatencyMetrics(factory, "CasPrepare");
         casPropose = new LatencyMetrics(factory, "CasPropose");
         casCommit = new LatencyMetrics(factory, "CasCommit");
+
+        repairsStarted = createKeyspaceCounter("RepairsStarted", new MetricValue()
+        {
+            public Long getValue(TableMetrics metric)
+            {
+                return metric.repairsStarted.getCount();
+            }
+        });
+        repairsCompleted = createKeyspaceCounter("RepairsCompleted", new MetricValue()
+        {
+            public Long getValue(TableMetrics metric)
+            {
+                return metric.repairsCompleted.getCount();
+            }
+        });
     }
 
     /**
@@ -278,6 +298,30 @@ public class KeyspaceMetrics
         return Metrics.register(factory.createMetricName(name), new Gauge<Long>()
         {
             public Long getValue()
+            {
+                long sum = 0;
+                for (ColumnFamilyStore cf : keyspace.getColumnFamilyStores())
+                {
+                    sum += extractor.getValue(cf.metric);
+                }
+                return sum;
+            }
+        });
+    }
+
+    /**
+     * Creates a counter that will sum the current value of a metric for all column families in this keyspace
+     * @param name
+     * @param extractor
+     * @return Counter that computes sum of MetricValue.getValue()
+     */
+    private Counter createKeyspaceCounter(String name, final MetricValue extractor)
+    {
+        allMetrics.add(name);
+        return Metrics.register(factory.createMetricName(name), new Counter()
+        {
+            @Override
+            public long getCount()
             {
                 long sum = 0;
                 for (ColumnFamilyStore cf : keyspace.getColumnFamilyStores())
